style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    font-size: 16px;
    line-height: 1.5;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-weight: 500;
    overflow-y: auto;
}

.container {
    display: flex;
}

.left-side {
    background-color: antiquewhite;
    width: 400px;
    padding: 20px;
}

.left-side h1 {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 4rem;
    margin-bottom: 20px;
}

.right-side {
    background-color: #2f2c2b;
    width: 100%;
    color: white;
}

.todo-container {
    padding-top: 85px;
    display: flex;
    flex-direction: column;
}

.todo-row {
    display: flex;
    flex-direction: row;
    width: 70%;
    margin: auto;
}

.todo {
    width: 100%;
    border: 2px solid white;
    font-size: 26px;
    padding: 16px;
    margin-bottom: 25px;
    list-style: none;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.icon {
    font-size: 40px;
    padding: 8px;
}

.todo:hover {
    background-color: gray;
}

i {
    cursor: pointer;
}

i:hover {
    transform: scale(1.2);
    color: red;
}

#add-todo {
    padding: 8px;
    border: 2px solid black;
    background-color: transparent;
    font-size: 16px;
    font-weight: 500;
    cursor: pointer;
}

#add-todo:hover {
    background-color: gray;
}

input {
    padding: 6px;
    border: 2px solid black;
    width: 70%;
    font-size: 16px;
}

